--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -3,7 +3,8 @@ develop = .
 
 installed = .installed-build.cfg
 
-parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap python
+#parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap python
+parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -35,17 +36,18 @@ configure-options = --prefix=${options:prefix}
 
 [urls]
 #gnu = ftp://ftp.gnu.org/gnu
+gnu = http://ftp.gnu.org/pub/gnu
 #gnu = http://mirrors.igsobe.com/gnu
 #gnu = ftp://ftp.cs.huji.ac.il/mirror/GNU
 #gnu = http://mirrors.ecvps.com/gnu/
 #gnu = ftp://aeneas.mit.edu/pub/gnu/
 #gnu = http://mirror.csclub.uwaterloo.ca/gnu/
-gnu = ftp://python.infinidat.com/archives/
+#gnu = ftp://python.infinidat.com/archives/
 
 [gnu]
 name = ${:_buildout_section_name_}
-#url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
-url = ${urls:gnu}/${:name}-${:version}.tar.gz
+url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
+#url = ${urls:gnu}/${:name}-${:version}.tar.gz
 
 [gnu-bz2]
 name = ${:_buildout_section_name_}
@@ -65,7 +67,7 @@ LD_LIBRARY_PATH = ${:DYLD_LIBRARY_PATH}
 <= options-no-rpath
 recipe = hexagonit.recipe.cmmi
 version = 1.2.7
-url = ftp://python.infinidat.com/archives/zlib-${:version}.tar.gz
+url = http://zlib.net/zlib-${:version}.tar.gz
 
 [ncurses]
 <= options
@@ -88,8 +90,8 @@ LDFLAGS = ${environment:LDFLAGS} -lncurses
 [openssl]
 <= options
 recipe = hexagonit.recipe.cmmi
-version = 1.0.0d
-url = ftp://python.infinidat.com/archives/openssl-${:version}.tar.gz
+version = 1.0.0e
+url = http://www.openssl.org/source/openssl-${:version}.tar.gz
 configure-command = ./config
 configure-options = --prefix=${options:prefix} --shared --libdir=lib
 
@@ -97,7 +99,7 @@ configure-options = --prefix=${options:prefix} --shared --libdir=lib
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 5.8p1
-url = ftp://python.infinidat.com/archives/openssh-${:version}.tar.gz
+url = http://ftp3.usa.openbsd.org/pub/OpenBSD/OpenSSH/portable/openssh-6.2p1.tar.gz
 environment-section = openssh-environment
 configure-options = --prefix=${options:prefix} --without-rpath --without-openssl-header-check --with-ssl-dir=${options:prefix}
 
@@ -152,7 +154,7 @@ configure-options = ${options:configure-options} --enable-relocatable
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 1.0.6
-url = ftp://python.infinidat.com/archives/bzip2-${:version}.tar.gz
+url = http://www.bzip.org/${:version}/bzip2-${:version}.tar.gz
 configure-command = echo
 make-options = PREFIX=${:prefix} DESTDIR=${:prefix}
 name = bzip2
@@ -168,21 +170,22 @@ configure-options = --prefix=${options:prefix} --disable-rpath --without-git --w
 [sqlite3]
 <= options
 recipe = hexagonit.recipe.cmmi
-version = autoconf-3070602
-url = ftp://python.infinidat.com/archives/sqlite-${:version}.tar.gz
+version = autoconf-3071601
+url = http://www.sqlite.org/2013/sqlite-${:version}.tar.gz
 
 [db]
 <= options
 recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/db-5.1.25.tar.gz
+#url = http://download.oracle.com/otn/berkeley-db/db-5.3.21.tar.gz
+url = http://pkgs.fedoraproject.org/repo/pkgs/libdb/db-5.3.21.tar.gz/3fda0b004acdaa6fa350bfc41a3b95ca/db-5.3.21.tar.gz
 configure-options = ${options:configure-options} --disable-java --enable-hash
 configure-command = ./dist/configure
 
 [libxml2]
 <= options
 recipe = hexagonit.recipe.cmmi
-version = 2.7.8
-url = ftp://python.infinidat.com/archives/libxml2-${:version}.tar.gz
+version = 2.9.0
+url = ftp://xmlsoft.org/libxml2/libxml2-${:version}.tar.gz
 configure-options = ${options:configure-options} --without-python
 
 [libxslt]
