-- adding additional options; in progress

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -4,7 +4,7 @@ develop = .
 installed = .installed-build.cfg
 
 #parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap python
-parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent python
+parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -191,8 +191,9 @@ configure-options = ${options:configure-options} --without-python
 [libxslt]
 <= options
 recipe = hexagonit.recipe.cmmi
-version = 1.1.26
-url = ftp://python.infinidat.com/archives/libxslt-${:version}.tar.gz
+version = 1.1.28
+#url = ftp://python.infinidat.com/archives/libxslt-${:version}.tar.gz
+url = ftp://xmlsoft.org/libxslt/libxslt-${:version}.tar.gz
 configure-options = ${options:configure-options} --without-python --without-plugins --with-libxml-prefix=${:prefix}
 environment-section = libxslt-environment
 
@@ -203,7 +204,9 @@ CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/libxml2
 [libffi]
 <= options
 recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/libffi-3.0.9.tar.gz
+version = 3.0.13
+#url = ftp://python.infinidat.com/archives/libffi-3.0.9.tar.gz
+url = ftp://sourceware.org/pub/libffi/libffi-${:version}.tar.gz
 
 [gdbm]
 <= options
@@ -215,20 +218,32 @@ patches = ${:patches-dir}/${:name}-${:version}-Makefile.patch
 [libevent]
 <= options
 recipe = hexagonit.recipe.cmmi
-version = 1.4.13
-url = ftp://python.infinidat.com/archives/libevent-${:version}-stable.tar.gz
+version = 2.0.21
+#url = ftp://python.infinidat.com/archives/libevent-${:version}-stable.tar.gz
+url = https://github.com/downloads/libevent/libevent/libevent-${:version}-stable.tar.gz
+
+[gdb]
+<= options
+recipe = hexagonit.recipe.cmmi
+version = 7.5
+url = http://ftp.gnu.org/gnu/gdb/gdb-${:version}.tar.gz
 
 [python]
 <= options
 recipe = hexagonit.recipe.cmmi
 name = python
-version = 2.7.2
-url = ftp://python.infinidat.com/archives/Python-${:version}.tgz
+version = 2.7.4
+#url = ftp://python.infinidat.com/archives/Python-${:version}.tgz
+url = http://www.python.org/ftp/python/${:version}/Python-${:version}.tgz
 configure-options = --prefix=${options:prefix} --enable-shared --enable-ipv6 --with-dbmliborder=gdbm --with-gcc
 environment-section = python-environment
-patches = ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
+patches =
+    ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
+#make-targets =
+#    test
+#    install
 
 [python-environment]
 <= environment
