-- adding python config patch, setting python build env path, and gnu'ifying gdb build url

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -226,7 +226,7 @@ url = https://github.com/downloads/libevent/libevent/libevent-${:version}-stable
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 7.5
-url = http://ftp.gnu.org/gnu/gdb/gdb-${:version}.tar.gz
+url = ${urls:gnu}/gdb/gdb-${:version}.tar.gz
 
 [python]
 <= options
@@ -241,6 +241,7 @@ patches =
     ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
+    ${:patches-dir}/${:name}-${:version}-python-config.patch
 #make-targets =
 #    test
 #    install
@@ -248,4 +249,5 @@ patches =
 [python-environment]
 <= environment
 CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/sasl
+PATH = ${options:prefix}/bin:%(PATH)s
 
