--- a/buildout-build-ubuntu.cfg
+++ b/buildout-build-ubuntu.cfg
@@ -2,8 +2,5 @@
 extends = buildout-build.cfg
 
 [python]
-patches = ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
-    ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
-    ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
-    ${:patches-dir}/${:name}-${:version}-ubuntu-platform.patch
+patches += ${:patches-dir}/${:name}-${:version}-ubuntu-platform.patch
 
