--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -237,8 +237,7 @@ version = 2.7.4
 url = http://www.python.org/ftp/python/${:version}/Python-${:version}.tgz
 configure-options = --prefix=${options:prefix} --enable-shared --enable-ipv6 --with-dbmliborder=gdbm --with-gcc
 environment-section = python-environment
-patches =
-    ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
+patches = ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
     ${:patches-dir}/${:name}-${:version}-python-config.patch
