-- editing urls and versions

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -3,8 +3,10 @@ develop = .
 
 installed = .installed-build.cfg
 
-#parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap python
-parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb python
+#parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap gdb python
+
+parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent openldap gdb python
+#parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -49,10 +51,10 @@ name = ${:_buildout_section_name_}
 url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
 #url = ${urls:gnu}/${:name}-${:version}.tar.gz
 
-[gnu-bz2]
-name = ${:_buildout_section_name_}
+#[gnu-bz2]
+#name = ${:_buildout_section_name_}
 #url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.bz2
-url = ${urls:gnu}/${:name}-${:version}.tar.bz2
+#url = ${urls:gnu}/${:name}-${:version}.tar.bz2
 
 [environment]
 CC = gcc -static-libgcc
@@ -111,8 +113,9 @@ CFLAGS = ${environment:CFLAGS} -I{$:prefix}/include/openssl
 <= options
 recipe = hexagonit.recipe.cmmi
 name = cyrus-sasl
-version = 2.1.23
-url = ftp://python.infinidat.com/archives/${:name}-${:version}.tar.gz
+version = 2.1.25
+#url = ftp://python.infinidat.com/archives/${:name}-${:version}.tar.gz
+url = http://ftp.andrew.cmu.edu/pub/cyrus-mail/${:name}-${:version}.tar.gz
 configure-options = --prefix=${options:prefix} --without-saslauthd --without-authdaemond --disable-java --disable-dependency-tracking --disable-rpath --disable-java --without-gdbm --without-dblib --disable-macos-framework
 patches = ${:patches-dir}/${:name}-${:version}-configure.patch
     ${:patches-dir}/${:name}-${:version}-ltconfig.patch
@@ -121,23 +124,33 @@ patches = ${:patches-dir}/${:name}-${:version}-configure.patch
 [openldap]
 <= options
 recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/openldap-stable-20100719.tgz
+name = openldap-stable
+version = 20120311
+#url = ftp://python.infinidat.com/archives/openldap-stable-20100719.tgz
+url = http://www.openldap.org/software/download/OpenLDAP/${:name}/${:name}-${:version}.tgz
 configure-options = --prefix=${options:prefix} --disable-slapd --disable-backends --disable-rpath
 
 [libgpg-error]
 <= options
 recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/libgpg-error-1.10.tar.bz2
+name = libgpg-error
+version = 1.11
+#url = ftp://python.infinidat.com/archives/libgpg-error-1.10.tar.bz2
+url = ftp://ftp.gnupg.org/gcrypt/${:name}/${:name}-${:version}.tar.bz2
 
 [libgcrypt]
 <= options
 recipe = hexagonit.recipe.cmmi
+name = libgcrypt
+version = 1.5.1
 configure-options = ${options:configure-options} --with-gpg-error-prefix=${:prefix}
-url = ftp://python.infinidat.com/archives/libgcrypt-1.5.0.tar.bz2
+#url = ftp://python.infinidat.com/archives/libgcrypt-1.5.0.tar.bz2
+url = ftp://ftp.gnupg.org/gcrypt/${:name}/${:name}-${:version}.tar.gz
 
 [libgnutls]
 <= options
-   gnu-bz2
+    gnu
+#   gnu-bz2
 recipe = hexagonit.recipe.cmmi
 name = gnutls
 version = 2.12.3
