-- adding site-packages to python rpath for .so's build by distribute -- fixing openssl -rpath for openssl binary and libs -- adding pcre, swig

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -1,12 +1,13 @@
+# vim: et sw=4 ts=4:
+
 [buildout]
 develop = .
 
 installed = .installed-build.cfg
 
 #parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap gdb python
-
-parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent openldap gdb python
-#parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb python
+#parts = zlib ncurses readline openssl                                          libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm            libevent openldap gdb python pcre swig
+parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb pcre swig python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -51,14 +52,9 @@ name = ${:_buildout_section_name_}
 url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
 #url = ${urls:gnu}/${:name}-${:version}.tar.gz
 
-#[gnu-bz2]
-#name = ${:_buildout_section_name_}
-#url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.bz2
-#url = ${urls:gnu}/${:name}-${:version}.tar.bz2
-
 [environment]
 CC = gcc -static-libgcc
-LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib
+LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib,-rpath=\$$ORIGIN/../../site-packages/../../../lib
 CFLAGS = -I${options:prefix}/include
 CPPFLAGS = ${:CFLAGS}
 LIBPATH = -L${options:prefix}/lib
@@ -95,7 +91,7 @@ recipe = hexagonit.recipe.cmmi
 version = 1.0.0e
 url = http://www.openssl.org/source/openssl-${:version}.tar.gz
 configure-command = ./config
-configure-options = --prefix=${options:prefix} --shared --libdir=lib
+configure-options = --prefix=${options:prefix} --shared --libdir=lib -Wl,-rpath=\$$ORIGIN/../lib
 
 [openssh]
 <= options
@@ -240,6 +236,18 @@ url = https://github.com/downloads/libevent/libevent/libevent-${:version}-stable
 recipe = hexagonit.recipe.cmmi
 version = 7.5
 url = ${urls:gnu}/gdb/gdb-${:version}.tar.gz
+
+[pcre]
+<= options
+recipe = hexagonit.recipe.cmmi
+version = 8.32
+url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${:version}.tar.gz
+
+[swig]
+<= options
+recipe = hexagonit.recipe.cmmi
+version = 2.0.9
+url = http://downloads.sourceforge.net/project/swig/swig/swig-${:version}/swig-${:version}.tar.gz
 
 [python]
 <= options
