-- moving python-specific LDFLAGS to python-environment

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -54,7 +54,7 @@ url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
 
 [environment]
 CC = gcc -static-libgcc
-LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib,-rpath=\$$ORIGIN/../../site-packages/../../../lib
+LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib
 CFLAGS = -I${options:prefix}/include
 CPPFLAGS = ${:CFLAGS}
 LIBPATH = -L${options:prefix}/lib
@@ -110,7 +110,6 @@ CFLAGS = ${environment:CFLAGS} -I{$:prefix}/include/openssl
 recipe = hexagonit.recipe.cmmi
 name = cyrus-sasl
 version = 2.1.25
-#url = ftp://python.infinidat.com/archives/${:name}-${:version}.tar.gz
 url = http://ftp.andrew.cmu.edu/pub/cyrus-mail/${:name}-${:version}.tar.gz
 configure-options = --prefix=${options:prefix} --without-saslauthd --without-authdaemond --disable-java --disable-dependency-tracking --disable-rpath --disable-java --without-gdbm --without-dblib --disable-macos-framework
 patches = ${:patches-dir}/${:name}-${:version}-configure.patch
@@ -122,7 +121,6 @@ patches = ${:patches-dir}/${:name}-${:version}-configure.patch
 recipe = hexagonit.recipe.cmmi
 name = openldap-stable
 version = 20120311
-#url = ftp://python.infinidat.com/archives/openldap-stable-20100719.tgz
 url = http://www.openldap.org/software/download/OpenLDAP/${:name}/${:name}-${:version}.tgz
 configure-options = --prefix=${options:prefix} --disable-slapd --disable-backends --disable-rpath
 
@@ -131,7 +129,6 @@ configure-options = --prefix=${options:prefix} --disable-slapd --disable-backend
 recipe = hexagonit.recipe.cmmi
 name = libgpg-error
 version = 1.11
-#url = ftp://python.infinidat.com/archives/libgpg-error-1.10.tar.bz2
 url = ftp://ftp.gnupg.org/gcrypt/${:name}/${:name}-${:version}.tar.bz2
 
 [libgcrypt]
@@ -140,7 +137,6 @@ recipe = hexagonit.recipe.cmmi
 name = libgcrypt
 version = 1.5.1
 configure-options = ${options:configure-options} --with-gpg-error-prefix=${:prefix}
-#url = ftp://python.infinidat.com/archives/libgcrypt-1.5.0.tar.bz2
 url = ftp://ftp.gnupg.org/gcrypt/${:name}/${:name}-${:version}.tar.gz
 
 [libgnutls]
@@ -185,7 +181,6 @@ url = http://www.sqlite.org/2013/sqlite-${:version}.tar.gz
 [db]
 <= options
 recipe = hexagonit.recipe.cmmi
-#url = http://download.oracle.com/otn/berkeley-db/db-5.3.21.tar.gz
 url = http://pkgs.fedoraproject.org/repo/pkgs/libdb/db-5.3.21.tar.gz/3fda0b004acdaa6fa350bfc41a3b95ca/db-5.3.21.tar.gz
 configure-options = ${options:configure-options} --disable-java --enable-hash
 configure-command = ./dist/configure
@@ -201,7 +196,6 @@ configure-options = ${options:configure-options} --without-python
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 1.1.28
-#url = ftp://python.infinidat.com/archives/libxslt-${:version}.tar.gz
 url = ftp://xmlsoft.org/libxslt/libxslt-${:version}.tar.gz
 configure-options = ${options:configure-options} --without-python --without-plugins --with-libxml-prefix=${:prefix}
 environment-section = libxslt-environment
@@ -214,7 +208,6 @@ CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/libxml2
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 3.0.13
-#url = ftp://python.infinidat.com/archives/libffi-3.0.9.tar.gz
 url = ftp://sourceware.org/pub/libffi/libffi-${:version}.tar.gz
 
 [gdbm]
@@ -228,7 +221,6 @@ patches = ${:patches-dir}/${:name}-${:version}-Makefile.patch
 <= options
 recipe = hexagonit.recipe.cmmi
 version = 2.0.21
-#url = ftp://python.infinidat.com/archives/libevent-${:version}-stable.tar.gz
 url = https://github.com/downloads/libevent/libevent/libevent-${:version}-stable.tar.gz
 
 [gdb]
@@ -254,7 +246,6 @@ url = http://downloads.sourceforge.net/project/swig/swig/swig-${:version}/swig-$
 recipe = hexagonit.recipe.cmmi
 name = python
 version = 2.7.4
-#url = ftp://python.infinidat.com/archives/Python-${:version}.tgz
 url = http://www.python.org/ftp/python/${:version}/Python-${:version}.tgz
 configure-options = --prefix=${options:prefix} --enable-shared --enable-ipv6 --with-dbmliborder=gdbm --with-gcc
 environment-section = python-environment
@@ -268,6 +259,7 @@ patches = ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
 
 [python-environment]
 <= environment
+LDFLAGS = ${environment:LDFLAGS},-rpath=\$$ORIGIN/../../site-packages/../../../lib
 CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/sasl
 PATH = ${options:prefix}/bin:%(PATH)s
 
