--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -7,7 +7,7 @@ installed = .installed-build.cfg
 
 #parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent openldap gdb python
 #parts = zlib ncurses readline openssl                                          libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm            libevent openldap gdb python pcre swig
-parts = zlib ncurses readline openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb pcre swig python
+parts = zlib ncurses readline bash openssl libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm libevent gdb pcre swig python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -84,6 +84,12 @@ environment-section = readline-environment
 [readline-environment]
 <= environment
 LDFLAGS = ${environment:LDFLAGS} -lncurses
+
+[bash]
+<= options
+   gnu
+recipe = hexagonit.recipe.cmmi
+version = 4.2
 
 [openssl]
 <= options
@@ -224,10 +230,10 @@ version = 2.0.21
 url = https://github.com/downloads/libevent/libevent/libevent-${:version}-stable.tar.gz
 
 [gdb]
-<= options
+<= options-no-rpath
+   gnu
 recipe = hexagonit.recipe.cmmi
 version = 7.5
-url = ${urls:gnu}/gdb/gdb-${:version}.tar.gz
 
 [pcre]
 <= options
