--- a/buildout-pack.cfg
+++ b/buildout-pack.cfg
@@ -26,10 +26,18 @@ executable = dist/bin/python
 recipe = infi.recipe.python:pack
 
 include_list =
+    dist/bin/bash
+    dist/bin/bz*
+    dist/bin/gdb
+    dist/bin/openssl
+    dist/bin/pcre-config
+    dist/bin/pydoc
     dist/bin/python
     dist/bin/python-config
     dist/bin/python2.7
     dist/bin/python2.7-config
+    dist/bin/sqlite3
+    dist/bin/swig
     dist/include
     dist/share/info
     dist/share/terminfo
