-- fixing issue with openssl not receiving LDFLAGS, and therefore not having a valid rpath -- refactoring many sections (work still in progress on this) 	-- use upstream sources 	-- consistent section ordering

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -1,9 +1,30 @@
+# vim: et sw=4 ts=4:
+
 [buildout]
 develop = .
 
 installed = .installed-build.cfg
 
-parts = zlib ncurses readline openssl openssh libgpg-error libgcrypt libgnutls libiconv bzip2 gettext sqlite3 db libxml2 libxslt libffi gdbm cyrus-sasl libevent libev zeromq openldap graphviz python
+#parts = libxml2 libxslt cyrus-sasl libevent libev zeromq openldap graphviz
+
+parts =
+##    zlib
+##    bzip2
+##    ncurses
+##    readline
+#    libiconv
+#    gettext
+    openssl
+#    openssh
+#    libgpg-error
+#    libgcrypt
+#    gnutls
+###    gdb
+##    sqlite3
+##    db
+##    gdbm
+##    libffi
+###    python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -20,90 +41,244 @@ download-cache = .cache
 log-level = DEBUG
 
 [options]
-keep-compile-dir = true
 configure-options = --prefix=${options:prefix} --disable-rpath
-prefix = ${buildout:directory}/dist
-patches-dir = ${buildout:directory}/src/patches
-patch-options = -p1
-hooks-dir = ${buildout:directory}/src/hooks
 environment-section = environment
+hooks-dir = ${buildout:directory}/src/hooks
 ignore-existing = true
+keep-compile-dir = true
+patch-options = -p1
+patches-dir = ${buildout:directory}/src/patches
+prefix = ${buildout:directory}/dist
 
-[options-no-rpath]
+[options-no-disable-rpath]
 <= options
 configure-options = --prefix=${options:prefix}
 
-[urls]
-#gnu = ftp://ftp.gnu.org/gnu
-#gnu = http://mirrors.igsobe.com/gnu
-#gnu = ftp://ftp.cs.huji.ac.il/mirror/GNU
-#gnu = http://mirrors.ecvps.com/gnu/
-#gnu = ftp://aeneas.mit.edu/pub/gnu/
-#gnu = http://mirror.csclub.uwaterloo.ca/gnu/
-gnu = ftp://python.infinidat.com/archives/
-
-[gnu]
-name = ${:_buildout_section_name_}
-#url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.gz
-url = ${urls:gnu}/${:name}-${:version}.tar.gz
-
-[gnu-bz2]
-name = ${:_buildout_section_name_}
-#url = ${urls:gnu}/${:name}/${:name}-${:version}.tar.bz2
-url = ${urls:gnu}/${:name}-${:version}.tar.bz2
-
 [environment]
 CC = gcc -static-libgcc
-LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib
 CFLAGS = -I${options:prefix}/include
 CPPFLAGS = ${:CFLAGS}
-LIBPATH = -L${options:prefix}/lib
 DYLD_LIBRARY_PATH = ${options:prefix}/lib
 LD_LIBRARY_PATH = ${:DYLD_LIBRARY_PATH}
+LDFLAGS = -L${options:prefix}/lib -Wl,-rpath=\$$ORIGIN/../lib
+LIBPATH = -L${options:prefix}/lib
 
-[zlib]
-<= options-no-rpath
+[archive]
+ext = .tar.gz
+name = ${:_buildout_section_name_}
 recipe = hexagonit.recipe.cmmi
-version = 1.2.7
-url = ftp://python.infinidat.com/archives/zlib-${:version}.tar.gz
+
+[urls]
+gnu = https://ftp.gnu.org/gnu
+gnupg = ftp://ftp.gnupg.org/gcrypt
+
+[site-gnu]
+<= archive
+url = ${urls:gnu}/${:name}/${:name}-${:version}${:ext}
+
+[site-gnupg]
+<= archive
+ext = .tar.bz2
+url = ${urls:gnupg}/${:name}/${:name}-${:version}${:ext}
+
+[bzip2]
+<= archive
+   options
+version = 1.0.6
+url = http://www.bzip.org/${:version}/${:name}-${:version}.tar.gz
+patches = ${:patches-dir}/${:name}-${:version}-unix-Makefile.patch
+configure-command = echo
+make-options =
+    PREFIX=${:prefix}
+    DESTDIR=${:prefix}
+make-targets =
+    check
+    install
+
+[db]
+<= archive
+   options
+version = 5.1.25
+url = ftp://python.infinidat.com/archives/db-${:version}.tar.gz
+configure-options =
+    ${options:configure-options}
+    --disable-java
+    --enable-hash
+configure-command = ./dist/configure
+
+[gdb]
+<= options-no-disable-rpath
+   site-gnu
+version = 7.6
+
+[gdbm]
+<= options
+   site-gnu
+version = 1.8.3
+# TODO new version available
+patches = ${:patches-dir}/${:name}-${:version}-Makefile.patch
+
+[gettext]
+<= options
+   site-gnu
+version = 0.18.1.1
+configure-options =
+    ${options:configure-options}
+    --without-cvs
+    --without-git
+make-targets =
+    check
+    install
+
+[gnutls]
+<= options
+   site-gnu
+ext = .tar.bz2
+version = 2.12.20
+configure-options =
+    ${options:configure-options}
+    --with-libgcrypt
+    --with-libgcrypt-prefix=${:prefix}
+make-targets =
+    check
+    install
+
+[libffi]
+<= archive
+   options
+version = 3.0.13
+url = ftp://sourceware.org/pub/libffi/libffi-${:version}.tar.gz
+
+[libgcrypt]
+<= options
+   site-gnupg
+version = 1.5.3
+configure-options =
+    ${options:configure-options}
+    --with-gpg-error-prefix=${:prefix}
+make-targets =
+    check
+    install
+
+[libgpg-error]
+<= options
+   site-gnupg
+version = 1.12
+
+[libiconv]
+<= options
+   site-gnu
+version = 1.13.1
+configure-options =
+    ${options:configure-options}
+    --enable-relocatable
+make-targets =
+    check
+    install
 
 [ncurses]
 <= options
-   gnu
-recipe = hexagonit.recipe.cmmi
+   site-gnu
 version = 5.9
-configure-options = ${options:configure-options} --with-gpg-error-prefix=${:prefix} --disable-big-core --disable-root-environ --disable-macros --disable-rpath --with-shared --disable-largefile --without-ada --without-cxx-binding
+configure-options =
+    ${options:configure-options}
+    --disable-big-core
+    --disable-largefile
+    --disable-macros
+    --disable-root-environ
+    --with-shared
+    --without-ada
+    --without-cxx-binding
+#not sure why this was above? --with-gpg-error-prefix=${:prefix}
+
+[openssh]
+<= archive
+   options
+version = 6.2p2
+url = ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/openssh-${:version}.tar.gz
+environment-section = openssh-environment
+configure-options =
+    ${options:configure-options}
+    --with-ssl-dir=${options:prefix}
+    --without-openssl-header-check
+
+[openssh-environment]
+<= environment
+CFLAGS = ${environment:CFLAGS} -I{$:prefix}/include/openssl
+
+[openssl]
+<= archive
+   options-no-disable-rpath
+version = 1.0.1e
+#url = http://openssl.initrd.net/source/openssl-${:version}.tar.gz
+url = https://www.openssl.org/source/openssl-${:version}.tar.gz
+configure-command = ./config
+configure-options =
+    ${options-no-disable-rpath:configure-options}
+    --libdir=lib
+    shared
+    zlib-dynamic
+    -Wl,-rpath,\\\$\$\$\$\\\$\$\$\$ORIGIN/../lib
+make-targets =
+    test
+    install
+
+[python]
+<= archive
+   options-no-disable-rpath
+version = 2.7.5
+url = http://www.python.org/ftp/python/${:version}/Python-${:version}.tgz
+environment-section = python-environment
+configure-options =
+    ${options-no-disable-rpath:configure-options}
+    --enable-ipv6
+    --enable-shared
+    --with-dbmliborder=gdbm
+    --with-gcc
+patches =
+    ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
+    ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
+    ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
+post-make-hook = ${options:hooks-dir}/posix.py:purge_sysconfigdata
+
+[python-environment]
+<= environment
+#CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/gnutls -I${options:prefix}/include/graphviz -I${options:prefix}/include/libexslt -I${options:prefix}/include/libxml2 -I${options:prefix}/include/libxslt -I${options:prefix}/include/ncurses -I${options:prefix}/include/openssl -I${options:prefix}/include/readline -I${options:prefix}/include/sasl
+#LDFLAGS = ${environment:LDFLAGS} -L${options:prefix}/lib/engines -L${options:prefix}/lib/gettext -L${options:prefix}/lib/graphviz -L${options:prefix}/lib/libffi-3.0.9 -L${options:prefix}/lib/libxslt-plugins -L${options:prefix}/lib/pkgconfig -L${options:prefix}/lib/python2.7 -L${options:prefix}/lib/sasl2
+PATH = ${options:prefix}/bin:%(PATH)s
 
 [readline]
-<= options-no-rpath
-   gnu
-recipe = hexagonit.recipe.cmmi
+<= options-no-disable-rpath
+   site-gnu
 version = 6.2
 environment-section = readline-environment
+# needs this? (wasn't here before) configure-options = --with-curses
 
 [readline-environment]
 <= environment
 LDFLAGS = ${environment:LDFLAGS} -lncurses
 
-[openssl]
-<= options
-recipe = hexagonit.recipe.cmmi
-version = 1.0.0d
-url = ftp://python.infinidat.com/archives/openssl-${:version}.tar.gz
-configure-command = ./config
-configure-options = --prefix=${options:prefix} --shared --libdir=lib
+[sqlite3]
+<= archive
+   options
+version = 3071700
+url = https://www.sqlite.org/2013/sqlite-autoconf-${:version}.tar.gz
 
-[openssh]
-<= options
-recipe = hexagonit.recipe.cmmi
-version = 5.8p1
-url = ftp://python.infinidat.com/archives/openssh-${:version}.tar.gz
-environment-section = openssh-environment
-configure-options = --prefix=${options:prefix} --without-rpath --without-openssl-header-check --with-ssl-dir=${options:prefix}
+[zlib]
+<= archive
+   options-no-disable-rpath
+version = 1.2.8
+url = http://zlib.net/zlib-${:version}${:ext}
+make-targets = 
+    test
+    install
 
-[openssh-environment]
-<= environment
-CFLAGS = ${environment:CFLAGS} -I{$:prefix}/include/openssl
+
+
+
+
+
+
 
 [cyrus-sasl]
 <= options
@@ -121,62 +296,6 @@ patches = ${:patches-dir}/${:name}-${:version}-configure.patch
 recipe = hexagonit.recipe.cmmi
 url = ftp://python.infinidat.com/archives/openldap-stable-20100719.tgz
 configure-options = --prefix=${options:prefix} --disable-slapd --disable-backends --disable-rpath
-
-[libgpg-error]
-<= options
-recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/libgpg-error-1.10.tar.bz2
-
-[libgcrypt]
-<= options
-recipe = hexagonit.recipe.cmmi
-configure-options = ${options:configure-options} --with-gpg-error-prefix=${:prefix}
-url = ftp://python.infinidat.com/archives/libgcrypt-1.5.0.tar.bz2
-
-[libgnutls]
-<= options
-   gnu-bz2
-recipe = hexagonit.recipe.cmmi
-name = gnutls
-version = 2.12.3
-configure-options = ${options:configure-options} --with-libgcrypt-prefix=${:prefix} --with-libgcrypt
-
-[libiconv]
-<= options
-   gnu
-recipe = hexagonit.recipe.cmmi
-version = 1.13.1
-configure-options = ${options:configure-options} --enable-relocatable
-
-[bzip2]
-<= options
-recipe = hexagonit.recipe.cmmi
-version = 1.0.6
-url = ftp://python.infinidat.com/archives/bzip2-${:version}.tar.gz
-configure-command = echo
-make-options = PREFIX=${:prefix} DESTDIR=${:prefix}
-name = bzip2
-patches = ${:patches-dir}/${:name}-${:version}-unix-Makefile.patch
-
-[gettext]
-<= options
-   gnu
-recipe = hexagonit.recipe.cmmi
-version = 0.18.1.1
-configure-options = --prefix=${options:prefix} --disable-rpath --without-git --without-cvs
-
-[sqlite3]
-<= options
-recipe = hexagonit.recipe.cmmi
-version = autoconf-3070602
-url = ftp://python.infinidat.com/archives/sqlite-${:version}.tar.gz
-
-[db]
-<= options
-recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/db-5.1.25.tar.gz
-configure-options = ${options:configure-options} --disable-java --enable-hash
-configure-command = ./dist/configure
 
 [libxml2]
 <= options
@@ -197,18 +316,6 @@ environment-section = libxslt-environment
 <= environment
 CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/libxml2
 
-[libffi]
-<= options
-recipe = hexagonit.recipe.cmmi
-url = ftp://python.infinidat.com/archives/libffi-3.0.9.tar.gz
-
-[gdbm]
-<= options
-   gnu
-recipe = hexagonit.recipe.cmmi
-version = 1.8.3
-patches = ${:patches-dir}/${:name}-${:version}-Makefile.patch
-
 [libevent]
 <= options
 recipe = hexagonit.recipe.cmmi
@@ -220,24 +327,6 @@ url = ftp://python.infinidat.com/archives/libevent-${:version}-stable.tar.gz
 recipe = hexagonit.recipe.cmmi
 version = 4.15
 url = http://dist.schmorp.de/libev/libev-${:version}.tar.gz
-
-[python]
-<= options
-recipe = hexagonit.recipe.cmmi
-name = python
-version = 2.7.5
-url = ftp://python.infinidat.com/archives/Python-${:version}.tgz
-configure-options = --prefix=${options:prefix} --enable-shared --enable-ipv6 --with-dbmliborder=gdbm --with-gcc
-environment-section = python-environment
-patches = ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
-    ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
-    ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
-post-make-hook = ${options:hooks-dir}/posix.py:purge_sysconfigdata
-
-[python-environment]
-<= environment
-CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/gnutls -I${options:prefix}/include/graphviz -I${options:prefix}/include/libexslt -I${options:prefix}/include/libxml2 -I${options:prefix}/include/libxslt -I${options:prefix}/include/ncurses -I${options:prefix}/include/openssl -I${options:prefix}/include/readline -I${options:prefix}/include/sasl
-LDFLAGS = ${environment:LDFLAGS} -L${options:prefix}/lib/engines -L${options:prefix}/lib/gettext -L${options:prefix}/lib/graphviz -L${options:prefix}/lib/libffi-3.0.9 -L${options:prefix}/lib/libxslt-plugins -L${options:prefix}/lib/pkgconfig -L${options:prefix}/lib/python2.7 -L${options:prefix}/lib/sasl2
 
 [zeromq]
 <= options
