-- fix problem with openssl LDFLAGS and $ORIGIN -- see https://github.com/Infinidat/relocatable-python/issues/2 fixes Infinidat/relocatable-python#2

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -91,7 +91,7 @@ recipe = hexagonit.recipe.cmmi
 version = 1.0.0d
 url = ftp://python.infinidat.com/archives/openssl-${:version}.tar.gz
 configure-command = ./config
-configure-options = --prefix=${options:prefix} --shared --libdir=lib
+configure-options = --prefix=${options:prefix} --shared --libdir=lib -Wl,-rpath,\\\$\$\$\$\\\$\$\$\$ORIGIN/../lib
 
 [openssh]
 <= options
