-- instead of fixing openssl rpath with -Wl,... arg to config, patch the makefile LIBRPATH instead -- the problem with the other method is that it was picked up by the linker for the so's, and was invalid -- openssl has some weird recurisve make stuff going on, so quoting of $ORIGIN is hard for all paths

--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -218,7 +218,7 @@ configure-options =
     --libdir=lib
     shared
     zlib-dynamic
-    -Wl,-rpath,\\\$\$\$\$\\\$\$\$\$ORIGIN/../lib
+pre-make-hook = ${options:hooks-dir}/openssl.py:patch_makefile_librpath
 make-targets =
     test
     install
