--- a/buildout-pack.cfg
+++ b/buildout-pack.cfg
@@ -26,6 +26,7 @@ executable = dist/bin/python
 recipe = infi.recipe.python:pack
 
 include_list =
+    dist/bin/openssl
     dist/bin/python
     dist/bin/python-config
     dist/bin/python2.7
