-- patch python*-config to work relocatable style (still need to fixup #! though)

--- a/buildout-pack.cfg
+++ b/buildout-pack.cfg
@@ -27,10 +27,15 @@ recipe = infi.recipe.python:pack
 
 include_list =
     dist/bin/openssl
+    dist/bin/pydoc
     dist/bin/python
     dist/bin/python-config
+    dist/bin/.python-config
+    dist/bin/python2-config
+    dist/bin/.python2-config
     dist/bin/python2.7
     dist/bin/python2.7-config
+    dist/bin/.python2.7-config
     dist/include
     dist/share/info
     dist/share/terminfo
