--- a/buildout-build.cfg
+++ b/buildout-build.cfg
@@ -24,7 +24,7 @@ parts =
 ##    db
 ##    gdbm
 ##    libffi
-###    python
+    python
 
 # do not use eggs from site-packages
 include-site-packages = false
@@ -239,13 +239,17 @@ patches =
     ${:patches-dir}/${:name}-${:version}-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-disutils-sysconfig.py.patch
     ${:patches-dir}/${:name}-${:version}-pythonhome-pythonrun.c.patch
-post-make-hook = ${options:hooks-dir}/posix.py:purge_sysconfigdata
+post-make-hook =
+    ${options:hooks-dir}/posix.py:patch
+make-targets =
+    test
+    install
 
 [python-environment]
 <= environment
 #CFLAGS = ${environment:CFLAGS} -I${options:prefix}/include/gnutls -I${options:prefix}/include/graphviz -I${options:prefix}/include/libexslt -I${options:prefix}/include/libxml2 -I${options:prefix}/include/libxslt -I${options:prefix}/include/ncurses -I${options:prefix}/include/openssl -I${options:prefix}/include/readline -I${options:prefix}/include/sasl
 #LDFLAGS = ${environment:LDFLAGS} -L${options:prefix}/lib/engines -L${options:prefix}/lib/gettext -L${options:prefix}/lib/graphviz -L${options:prefix}/lib/libffi-3.0.9 -L${options:prefix}/lib/libxslt-plugins -L${options:prefix}/lib/pkgconfig -L${options:prefix}/lib/python2.7 -L${options:prefix}/lib/sasl2
-PATH = ${options:prefix}/bin:%(PATH)s
+#PATH = ${options:prefix}/bin:%(PATH)s
 
 [readline]
 <= options-no-disable-rpath
